[gd_scene load_steps=5 format=3 uid="uid://ckonvx88mks8d"]

[ext_resource type="Script" uid="uid://dahbk8serjvie" path="res://Scenes/UI/unit_selection.gd" id="1_bxdoy"]
[ext_resource type="Texture2D" uid="uid://b1gbqcv7e8t4t" path="res://Sprites/UI/ButtonIcons/Wizards/AutoRifleIcon.png" id="2_ongp6"]
[ext_resource type="Texture2D" uid="uid://ck7xbeysukqg3" path="res://Sprites/UI/ButtonIcons/Wizards/BasicIcon.png" id="3_0rmpk"]
[ext_resource type="Texture2D" uid="uid://d16t6tiqbm3tp" path="res://Sprites/UI/ButtonIcons/Wizards/RifleIcon.png" id="4_jqnbg"]

[node name="Unit Selection" type="Node2D"]
script = ExtResource("1_bxdoy")
unitOneIcon = ExtResource("2_ongp6")
unitTwoIcon = ExtResource("3_0rmpk")
unitThreeIcon = ExtResource("4_jqnbg")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -389.5
offset_top = -182.5
offset_right = 389.5
offset_bottom = 182.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435192, 0.435192, 0.435192, 1)

[node name="UnitsForBattle" type="HBoxContainer" parent="."]
offset_left = -257.0
offset_top = 59.0
offset_right = -21.0
offset_bottom = 114.0

[node name="Unit1" type="VBoxContainer" parent="UnitsForBattle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Unit1Button" type="Button" parent="UnitsForBattle/Unit1"]
layout_mode = 2
size_flags_vertical = 3

[node name="Unit2" type="VBoxContainer" parent="UnitsForBattle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Unit2Button" type="Button" parent="UnitsForBattle/Unit2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Unit3" type="VBoxContainer" parent="UnitsForBattle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Unit3Button" type="Button" parent="UnitsForBattle/Unit3"]
layout_mode = 2
size_flags_vertical = 3

[node name="Unit4" type="VBoxContainer" parent="UnitsForBattle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Unit4Button" type="Button" parent="UnitsForBattle/Unit4"]
layout_mode = 2
size_flags_vertical = 3

[node name="All units" type="HBoxContainer" parent="."]
offset_left = -258.0
offset_top = -115.0
offset_right = -22.0
offset_bottom = -47.0

[node name="Unit1" type="VBoxContainer" parent="All units"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitSelect1" type="Button" parent="All units/Unit1"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_0rmpk")

[node name="Unit2" type="VBoxContainer" parent="All units"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitSelect2" type="Button" parent="All units/Unit2"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("4_jqnbg")

[node name="Unit3" type="VBoxContainer" parent="All units"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitSelect3" type="Button" parent="All units/Unit3"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("4_jqnbg")

[node name="Unit4" type="VBoxContainer" parent="All units"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UnitSelect4" type="Button" parent="All units/Unit4"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnterGame" type="Button" parent="."]
offset_left = 75.0
offset_top = 66.0
offset_right = 202.0
offset_bottom = 109.0
text = "Enter the game"

[connection signal="pressed" from="UnitsForBattle/Unit1/Unit1Button" to="." method="_on_unit_1_button_pressed"]
[connection signal="pressed" from="UnitsForBattle/Unit2/Unit2Button" to="." method="_on_unit_2_button_pressed"]
[connection signal="pressed" from="UnitsForBattle/Unit3/Unit3Button" to="." method="_on_unit_3_button_pressed"]
[connection signal="pressed" from="UnitsForBattle/Unit4/Unit4Button" to="." method="_on_unit_4_button_pressed"]
[connection signal="pressed" from="All units/Unit1/UnitSelect1" to="." method="_on_unit_select_1_pressed"]
[connection signal="pressed" from="All units/Unit2/UnitSelect2" to="." method="_on_unit_select_2_pressed"]
[connection signal="pressed" from="All units/Unit3/UnitSelect3" to="." method="_on_unit_select_3_pressed"]
[connection signal="pressed" from="All units/Unit4/UnitSelect4" to="." method="_on_unit_select_4_pressed"]
[connection signal="button_up" from="EnterGame" to="." method="_on_enter_game_button_up"]
